<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/whitebg" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:width="460dp"
        android:height="80dp"
        android:padding="20dp"
        android:textSize="30dp"
        android:layout_margin="5dp"
        android:background="#11aabb"
        android:text="@string/currGoal"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="460dp"
        android:height="40dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="#bb9999"
        android:text="@string/fashionGoal"
        android:background="#eedddd" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dp"
        android:progress="30"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="460dp"
        android:height="40dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="#bb9999"
        android:text="@string/sportsGoal"
        android:background="#eedddd" />
    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dp"
        android:progress="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#eedddd"
        android:height="40dp"
        android:padding="10dp"
        android:text="@string/travelGoal"
        android:textColor="#bb9999"
        android:width="460dp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" 
        android:progress="50"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:height="80dp"
            android:text="@string/editF"
            android:width="100dp"
            android:background="#8ebc92"
            android:textColor="#ffddee"
            android:clickable="true"  />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:height="80dp"
            android:text="@string/home"
            android:width="100dp"
            android:background="#e8c458"
            android:textColor="#ffddee"
            android:clickable="true"  />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:height="80dp"
            android:text="@string/addG"
            android:width="100dp"
            android:background="#d05546"
            android:textColor="#ffddee"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>